--- a/_posts/_posts/0000-01-02-SRVN6.md
+++ b/_posts/_posts/0000-01-02-SRVN6.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-My first debut on this git hub
+"My first debut on this git hub|"
 Use the left arrow to go back!
